<resources>
    <string name="app_name">Bcash</string>
    <string name="item_image">ItemImage</string>
    <string name="item_text">Income</string>
    <string name="item_category">Healthcare</string>
    <string name="item_amount">$ 200</string>
    <string name="item_date">August 8, 2021</string>
    <string name="total_income">Income:</string>
    <string name="total_expense">Expense:</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_income_amount">$ 0</string>
    <string name="total_expense_amount">$ 0</string>
    <string name="total_balance_amount">$ 0</string>
    <string name="details_image">Details Image</string>
    <string name="details_amount_headline">Amount</string>
    <string name="details_type_headline">Type</string>
    <string name="details_title_headline">Title</string>
    <string name="details_tag_headline">Tag</string>
    <string name="details_when">When</string>
    <string name="details_desc_headline">Description</string>
    <string name="details_create_date_headline">Create date</string>
    <string name="add_title">Title</string>
    <string name="add_amount">Amount</string>
    <string name="add_type">Type</string>
    <string name="add_date">When</string>
    <string name="add_description">Description</string>
    <string name="add_tag">Tag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_title">Expense Manager</string>
    <string name="splash_about">Stay on track with your expenses so you’ll never run out of money again! Start budgeting and saving so you can afford nice things.</string>
    <string name="empty_title">There are no data available</string>
    <string name="todo">TODO</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="balance">Balance</string>
    <string name="income_amount">$ 0</string>
    <string name="expense_amount">$ 0</string>
    <string name="balance_amount">$ 0</string>
    <string name="button_save">Save</string>
    <string name="add_desc_text">Description</string>
    <string name="add_when_text">When</string>
    <string name="add_tag_text">Tag</string>
    <string name="add_type_text">Type</string>
    <string name="add_amount_text">Amount</string>
    <string name="add_amount_prefixtext">$</string>
    <string name="add_title_text">Title</string>
    <string name="successfully_save">Your cashflow saved successfully</string>
    <string name="successfully_update">Your cashflow updated successfully</string>
    <string name="successfully_delete">Your cashflow deleted successfully</string>
    <string name="total_balance_text">Total Balance:</string>
    <string name="expense_manager">Expense Manager</string>

    <string name="recent_activities">Recent Activities</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_statistics">Statistics</string>
    <string name="bottom_alarm">Alarm</string>
    <string name="bottom_add">Add</string>
    <string name="details_title">Details</string>
    <string name="adding_button">Adding</string>
    <string name="introduction">Introduction</string>
    <string name="add_new">Add new</string>
    <string name="budget">Budget</string>
    <string name="edit">Edit</string>
    <string name="total_control_your_expenses">Total control your expenses</string>
    <string name="list_of_expenses_is_empty">List of expenses is empty</string>
    <string name="write_your_first_expenses">Write your first expenses</string>
    <string name="about">About</string>
    <string name="logo_of_the_application">Logo of the application</string>
    <string name="description">Our application will help you to establish full control over your expenses. You will be able to track your money, identify unnecessary costs and bring your savings to the maximum level</string>
    <string name="housing_expanses">Housing expanses</string>
    <string name="housing">Housing</string>
    <string name="transportation">Transportation</string>
    <string name="food">Food</string>
    <string name="utilities">Utilities</string>
    <string name="insurance">Insurance</string>
    <string name="healthcare">Healthcare</string>
    <string name="saving_and_debts">Saving and Debts</string>
    <string name="personal_spending">Personal Spending</string>
    <string name="entertainment">Entertainment</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="spending">Spending</string>
    <string name="you_haven_t_added_any_entries_yet">You haven\'t added any entries yet</string>

    <string name="error_title">The title must not be empty</string>
    <string name="error_amount">This amount must not be empty</string>
    <string name="error_type">This type must not be empty</string>
    <string name="error_tag">This tag must not be empty</string>
    <string name="error_date">This date must not be empty</string>
    <string name="error_description">This description must note be empty</string>
    <string name="other">Other</string>
    <string name="undo">Undo</string>
</resources>