<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_8"
    android:layout_marginTop="@dimen/dimen_8"
    android:layout_marginEnd="@dimen/dimen_8"
    android:layout_marginBottom="@dimen/dimen_8"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/dimen_16"
    app:cardElevation="@dimen/dimen_8"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="@dimen/dimen_40"
            android:layout_height="@dimen/dimen_40"
            android:layout_margin="@dimen/dimen_10"
            android:background="@drawable/ic_rectangle_11"
            android:contentDescription="@string/item_image"
            android:src="@drawable/ic_income"
            app:layout_constraintBottom_toBottomOf="@id/item_constraint"
            app:layout_constraintLeft_toLeftOf="@id/item_constraint"
            app:layout_constraintTop_toTopOf="@id/item_constraint" />

        <TextView
            android:id="@+id/item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/item_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/item_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rectangle"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/item_category"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/item_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/item_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_14"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_20"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/item_amount"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="@id/item_constraint"
            app:layout_constraintRight_toRightOf="@id/item_constraint"
            app:layout_constraintTop_toTopOf="@id/item_constraint"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/item_date"
            android:textColor="@color/light_gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/item_constraint"
            app:layout_constraintEnd_toEndOf="@id/item_constraint"
            app:layout_constraintTop_toTopOf="@id/item_constraint"
            app:layout_constraintVertical_bias="0.859"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>