<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.about.AboutFragment">

    <TextView
        android:id="@+id/tvAboutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dimen_12"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivLogoAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_80"
        android:src="@drawable/ic_logo_about"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logo_of_the_application"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_80"
        android:text="@string/description"
        android:fontFamily="@font/raleway_medium"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoAbout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="Build version 1.1"
        android:fontFamily="@font/raleway_medium"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>