<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAddHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_12"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/adding_button"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:elevation="@dimen/dimen_16"
                app:cardCornerRadius="@dimen/dimen_12">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_title_layout"
                    style="@style/PrimaryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_title_text"
                    tools:ignore="UnusedAttribute">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:fontFamily="@font/rubik"
                        android:inputType="text"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:elevation="@dimen/dimen_16"
                app:cardCornerRadius="@dimen/dimen_12">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_amount_layout"
                    style="@style/PrimaryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_amount_text"
                    app:prefixText="@string/add_amount_prefixtext">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:fontFamily="@font/rubik"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:elevation="@dimen/dimen_16"
                app:cardCornerRadius="@dimen/dimen_12">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_type_layout"
                    style="@style/DropDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_type_text"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <AutoCompleteTextView
                        android:id="@+id/add_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/rubik"
                        android:inputType="none"
                        android:labelFor="@id/add_type_layout"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:elevation="@dimen/dimen_16"
                app:cardCornerRadius="@dimen/dimen_12">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_tag_layout"
                    style="@style/DropDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_tag_text"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <AutoCompleteTextView
                        android:id="@+id/add_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/rubik"
                        android:inputType="none"
                        android:labelFor="@id/add_tag"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:elevation="@dimen/dimen_16"
                app:cardCornerRadius="@dimen/dimen_12">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_when_layout"
                    style="@style/PrimaryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/add_when_text"
                    app:endIconDrawable="@drawable/ic_calendar"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/rubik"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:elevation="@dimen/dimen_16"
                app:cardCornerRadius="@dimen/dimen_12">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_desc_layout"
                    style="@style/PrimaryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_desc_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/rubik"
                        android:inputType="text"
                        android:maxLength="240"
                        android:maxLines="3" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>