<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".view.home.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_dashboard_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/main_relative"
            android:layout_marginTop="@dimen/dimen_12"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/budget"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <include
                android:id="@+id/expense_total_view"
                layout="@layout/expense_total_layout"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="80dp"
                android:layout_marginRight="@dimen/dimen_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="215dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/recent_activities"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/control_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="260dp"
                android:nestedScrollingEnabled="false"
                android:visibility="visible"
                tools:listitem="@layout/expense_item_layout" />


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="@dimen/dimen_16"
        android:background="@drawable/bg_btn_red"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/add_new"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:layout_gravity="end|bottom"/>

    <ViewStub
        android:id="@+id/empty_layout"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="68dp"
        android:layout_gravity="center"
        android:layout="@layout/empty_layout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.coordinatorlayout.widget.CoordinatorLayout>