<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expense_details_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/dimen_12"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/details_title"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_title_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/dimen_32"
            android:fontFamily="@font/raleway_bold"
            android:textSize="16sp"
            android:text="@string/details_title_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsHeader" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_40"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_10"
            app:cardCornerRadius="@dimen/dimen_12"
            android:elevation="@dimen/dimen_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_title_headline">

            <TextView
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_gravity="center"
                tools:text="Samsung level earphones" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/details_amount_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/dimen_16"
            android:fontFamily="@font/raleway_bold"
            android:textSize="16sp"
            android:text="@string/details_amount_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_details_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_amount_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_40"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_10"
            app:cardCornerRadius="@dimen/dimen_12"
            android:elevation="@dimen/dimen_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_amount_headline">

            <TextView
                android:id="@+id/details_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_gravity="center"
                tools:text="Amount" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/details_type_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/dimen_16"
            android:fontFamily="@font/raleway_bold"
            android:textSize="16sp"
            android:text="@string/details_type_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_amount_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_type_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_40"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_10"
            app:cardCornerRadius="@dimen/dimen_12"
            android:elevation="@dimen/dimen_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_type_headline">

            <TextView
                android:id="@+id/details_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_gravity="center"
                tools:text="Income" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/details_tag_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/dimen_16"
            android:fontFamily="@font/raleway_bold"
            android:textSize="16sp"
            android:text="@string/details_tag_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_type_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tag_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_40"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_10"
            app:cardCornerRadius="@dimen/dimen_12"
            android:elevation="@dimen/dimen_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_tag_headline">

            <TextView
                android:id="@+id/details_tag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_gravity="center"
                tools:text="Healthcare" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/details_when"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/dimen_16"
            android:fontFamily="@font/raleway_bold"
            android:textSize="16sp"
            android:text="@string/details_when"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_tag_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_when_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_40"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_10"
            app:cardCornerRadius="@dimen/dimen_12"
            android:elevation="@dimen/dimen_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_when">

            <TextView
                android:id="@+id/details_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_gravity="center"
                tools:text="August 08, 2021" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/details_desc_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/dimen_16"
            android:fontFamily="@font/raleway_bold"
            android:textSize="16sp"
            android:text="@string/details_desc_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_when_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_desc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_40"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_10"
            app:cardCornerRadius="@dimen/dimen_12"
            android:elevation="@dimen/dimen_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_desc_headline">

            <TextView
                android:id="@+id/details_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_gravity="center"
                tools:text="You can write something" />

        </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>